stitch/src/snapshots/stitch__parser__tests__parses_call_with_args.snap
---
source: stitch/src/parser.rs
expression: "p(\"f(x, y)\")"
---
Call {
    callee: Var(
        "f",
    ),
    args: [
        Arg {
            label: None,
            value: Var(
                "x",
            ),
        },
        Arg {
            label: None,
            value: Var(
                "y",
            ),
        },
    ],
}
