stitch/src/snapshots/stitch__parser__tests__parses_closed_range.snap
---
source: stitch/src/parser.rs
expression: "p(\"1..10\")"
---
Range {
    start: Some(
        Int(
            1,
        ),
    ),
    end: Some(
        Int(
            10,
        ),
    ),
    inclusive: false,
}
