stitch/src/snapshots/stitch__parser__tests__parses_comparison.snap
---
source: stitch/src/parser.rs
expression: "parse(\"1 < 2\")"
---
Binary {
    op: Lt,
    left: Int(
        1,
    ),
    right: Int(
        2,
    ),
}
