stitch/src/snapshots/stitch__parser__tests__parses_contract_with_abstract_method.snap
---
source: stitch/src/parser.rs
expression: "prog(\"contract Show { show() -> Str }\")"
---
[
    Contract {
        name: "Show",
        generics: [],
        methods: [
            Method {
                name: "show",
                modifier: Instance,
                params: [],
                ret: Some(
                    Name {
                        name: "Str",
                        args: [],
                    },
                ),
                body: None,
            },
        ],
    },
]
