stitch/src/snapshots/stitch__parser__tests__parses_contract_with_default_method.snap
---
source: stitch/src/parser.rs
expression: "prog(r#\"contract Greet { hello() -> Str = \"hi\" }\"#)"
---
[
    Contract {
        name: "Greet",
        generics: [],
        methods: [
            Method {
                name: "hello",
                modifier: Instance,
                params: [],
                ret: Some(
                    Name {
                        name: "Str",
                        args: [],
                    },
                ),
                body: Some(
                    Str(
                        [
                            Lit(
                                "hi",
                            ),
                        ],
                    ),
                ),
            },
        ],
    },
]
