stitch/src/snapshots/stitch__parser__tests__parses_contract_with_mut_and_free_modifiers.snap
---
source: stitch/src/parser.rs
expression: "prog(\"contract Counter { mut bump()  free zero() -> Counter }\")"
---
[
    Contract {
        name: "Counter",
        generics: [],
        methods: [
            Method {
                name: "bump",
                modifier: Mut,
                params: [],
                ret: None,
                uses: [],
                body: None,
            },
            Method {
                name: "zero",
                modifier: Free,
                params: [],
                ret: Some(
                    Name {
                        name: "Counter",
                        args: [],
                    },
                ),
                uses: [],
                body: None,
            },
        ],
    },
]
