stitch/src/snapshots/stitch__parser__tests__parses_empty_block.snap
---
source: stitch/src/parser.rs
expression: "p(\"{}\")"
---
Block {
    stmts: [],
    result: None,
}
