stitch/src/snapshots/stitch__parser__tests__parses_empty_call.snap
---
source: stitch/src/parser.rs
expression: "parse(\"f()\")"
---
Call {
    callee: Var(
        "f",
    ),
    args: [],
}
